- Force a change in the website content.

--- a/site/src/site/asciidoc/index.adoc
+++ b/site/src/site/asciidoc/index.adoc
@@ -63,3 +63,5 @@ Commits Mailing List: [Archive](https://lists.apache.org/list.html?commits@train
 Wiki: [https://cwiki.apache.org/confluence/display/TRAINING](https://cwiki.apache.org/confluence/display/TRAINING)
 
 Jira: [https://issues.apache.org/jira/browse/TRAINING](https://issues.apache.org/jira/browse/TRAINING)
+
+Some change ...
