- Added my presentation framework as second build unit to test the separation of builds

--- a/tools/maven-revealjs-asciidoctor-templte/src/main/asciidoc/subdir/_b.adoc
+++ b/tools/maven-revealjs-asciidoctor-templte/src/main/asciidoc/subdir/_b.adoc
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+////
 
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
@@ -16,21 +15,12 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 
--->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+////
 
-  <modelVersion>4.0.0</modelVersion>
+content from _src/docs/asciidoc/subdir/_b.adoc_.
 
-  <groupId>org.apache.training</groupId>
-  <artifactId>training-tools</artifactId>
-  <version>0.4.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-
-  <name>Training: Tools</name>
-
-  <modules>
-    <module>maven-revealjs-asciidoctor-templte</module>
-  </modules>
-
-</project>
+.include::_c.adoc[]
+[example]
+--
+include::_c.adoc[]
+--
