Origin/site updates (#8)
* Add MIT license to LICENSE.

* generate date and all people are cool

* Fix a few minor issues.

* remove references to PLC4X

* add myself to the team page

* escape &'s

* escape question marks

* better way to escape links

* sync with web site changes

* Update site/src/site/asciidoc/developers/team.adoc

Co-Authored-By: Lars Francke <github@lars-francke.de>

* fix up team page and add my photo

* add place holder logo

--- a/site/src/site/asciidoc/developers/building.adoc
+++ b/site/src/site/asciidoc/developers/building.adoc
@@ -19,21 +19,21 @@
 
 The Apache Training Website is built with `Apache Maven` and we have tried to make the build as simple as possible.
 
-For your convenience we also have provided a `Maven-Wrapper`, that should allow building with only `Java 8` or greater as requirement.
+For your convenience we also have provided a `Maven-Wrapper`, that should allow building with `Java 8` or greater as a requirement.
 
 === Requirements
 
-The only requirements to building the Apache Training website should be:
+The only requirements for building the Apache Training website should be:
 
 * Java 8 JDK (or newer)
 * Apache Maven (3.1.0 or newer) *(Optional)*
 
 === Using the Maven-Wrapper
 
-The so-called `Maven-Wrapper` is used by calling the Maven-Wrapper scripts `mvnw` (Mac & Linux) or `mvnw.cmd` (Windows) instead of the default Maven commands `mvn` and `mvn.cmd`.
+The so-called `Maven-Wrapper` is used by calling the Maven-Wrapper scripts `mvnw` (Mac &amp; Linux) or `mvnw.cmd` (Windows) instead of the default Maven commands `mvn` and `mvn.cmd`.
 
 These helpers ensure Maven is available in at least the version defined in `.mvn/maven-wrapper.properties`.
-If no suitable version can be found, it is automatically downloaded and installed alongside the project (So it doesn't have to be downloaded every time and every project can have it's own Maven version)
+If no suitable version can be found, it is automatically downloaded and installed alongside the project (So it doesn't have to be downloaded every time and every project can have its own Maven version)
 
 After the script has ensured a suitable Maven version is available, this is used and all arguments and parameters are transparently forwarded to this.
 So simply adding the additional `w` to each of the Maven commands, there should be no difference to using a pre-installed Maven version.
@@ -43,7 +43,7 @@ So simply adding the additional `w` to each of the Maven commands, there should 
 This document can't provide you with all the details needed to get started with `Maven` itself.
 But there is a lot of good documentation out there.
 
-Justin McLean and Christofer Dutz even recorded a not quite 2 hour Maven training Video some time ago for another Apache project.
+Justin Mclean and Christofer Dutz even recorded a not quite 2 hour Maven training Video some time ago for another Apache project.
 
 It should handle all the details needed to get a general understanding of Maven and how it works.
 
@@ -52,13 +52,13 @@ video::167857327[vimeo,width=640,height=420]
 
 === Building the Apache Training Website with Maven
 
-The PLC4X Website is also part of the same GIT repository that contains the code and it is built by Maven as well.
+The Training Website is also part of the same GIT repository that contains the code and it is built by Maven as well.
 
 In order to build the website the following command should be sufficient:
 
     mvn site
 
-However this will generate the website for each module inside it's `target/site` directory.
+However, this will generate the website for each module inside it's `target/site` directory.
 Opening this in a browser and navigating from pages of one module to another will not work as these links expect a different directory structure.
 In order to create a fully navigatable version of the Website, the following command should be sufficient:
 
@@ -68,4 +68,4 @@ This will generate an additional `target/staging` directory which contains the f
 
 A lot of documentation on Maven suggests to use the `site:site` goal directly instead of calling the `site` phase, but in case of Apache Training there is more than just the site generation that has to be executed.
 
-This is just a quick-start version of the site generation, for a fully detailed documentation please read the http://training.apache.org/developers/website.html[Website] documentation page.
+This is just a quick-start version of the site generation, for fully detailed documentation please read the http://training.apache.org/developers/website.html[Website] documentation page.
