--- a/site/src/site/asciidoc/developers/team.adoc
+++ b/site/src/site/asciidoc/developers/team.adoc
@@ -32,3 +32,9 @@ Sorted by first name:
 
  Frankfurt |Likes to swim outside the mainstream. He is really passionate about walking new paths. His first email to an Apache list on file was to the Cocoon project back in the year 2000. His direct involvement started in 2012 when he was elected to become an Apache Flex committer. Since then he became involved with a lot of Apache-internal groups and committees and was elected to become a Member of the Apache Software Foundation in 2015 and recently has taken up the role of mentoring several IoT podlings in the Apache Incubator. | a|image::team/cdutz.png[cdutz, 200, 200]
 
+| *Justin Mclean*
+
+Trainer and Consultant
+
+Various |Justin Mclean has been teaching for 10+ years and now splits his time between that and software development. He runs his own consulting company Class Software for 25+ years and has spoken at numerous conferences in his home of Australia and overseas. He's heavily involved in open source hardware and software, and runs the IoT meetup in Sydney. He currently teaches at an online college and is a casual academic at a university. | a|image::team/jmclean.jpg[jmclean, 200, 200]
+
