--- a/site/src/site/asciidoc/index.adoc
+++ b/site/src/site/asciidoc/index.adoc
@@ -20,11 +20,11 @@
 == Apache Training™ (Incubating)
 
 === Purpose
-The purpose of the Training project is to create high-quality training material for various projects in an open source form. Up until now everyone who wants to offer a Training course for one of the Apache projects needs to create her or his own slides/labs and keep them up-to-date. This is a significant investment of time and money. This project aims to spread that burden and help all Apache projects as we can create shared resources and we can also create cross-project trainings.
+The purpose of the Training project is to create high-quality training material for various projects in an open source form. Up until now everyone who wants to offer a Training course for one of the Apache projects needs to create her or his own slides/labs and keep them up-to-date. This is a significant investment of time and money. This project aims to spread that burden and help all Apache projects as we can create shared resources and we can also create cross-project training resources.
 
 To sum up, the main goals for this project:
 
-- Develop shared material that can be used for trainings
+- Develop shared material that can be used for training
 - Cross-project
     - Focused on Apache but also 3rd party projects where it makes sense
     - Develop “labs” or “hands-on” exercises
@@ -39,27 +39,27 @@ These are non-goals for this project:
 - The training material we develop is not necessarily self-explanatory. It still benefits from an experienced instructor but it will make it possible for talented people without the time and resources to develop material to still train others.
 
 === Rationale
-There are tons of companies offering training for and around the Apache ecosystem. From our experience everyone is building a very similar set of slides and labs (there’s only so many ways you can explain a concept). This project aims to create and use synergies. By also bringing these resources closer to their origin we hope to improve quality, freshness of the content and versatility (e.g. more language options).
+There are tons of companies offering training for and around the Apache ecosystem. From our experience, everyone is building a very similar set of slides and labs (there’s only so many ways you can explain a concept). This project aims to create and use synergies. By also bringing these resources closer to their origin we hope to improve quality, the freshness of the content and versatility (e.g. more language options).
 
 It is the mission of the Apache foundation “to provide software for the public good” and we believe this project can help with that mission by making the software more accessible for a broader audience.
 
 === Next steps
 The initial goal for the first few weeks or months is to have discussions and agreements on various scoping and technical issues as well as integrating existing donated material.
 
-After that we want to start building a library of content.
+From there we want to start building a library of content.
 
 === Getting involved
 
-The main resource for any discussion around this project is the dev mailing list (see below). If you have any specific question or want to get involved in any way, by all means do reach out and say hi!
+The main resource for any discussion around this project is the dev mailing list (see below). If you have any specific question or want to get involved in any way, by all means, do so and reach out and say hi!
 
 The following resources are currently being used by the project:
 
-Dev Mailing List: [Archive](https://lists.apache.org/list.html?dev@training.apache.org)  -  [Subscribe](mailto:dev-subscribe@training.apache.org)
+Dev Mailing List: link:++https://lists.apache.org/list.html?dev@training.apache.org++[Archive]  -  mailto:dev-subscribe@training.apache.org[Subscribe]
 
-Issues Mailing List: [Archive](https://lists.apache.org/list.html?issues@training.apache.org)  -  [Subscribe](mailto:issues-subscribe@training.apache.org)
+Issues Mailing List: link:++https://lists.apache.org/list.html?issues@training.apache.org++[Archive]  -  mailto:issues-subscribe@training.apache.org[Subscribe]
 
-Commits Mailing List: [Archive](https://lists.apache.org/list.html?commits@training.apache.org)  -  [Subscribe](mailto:commits-subscribe@training.apache.org)
+Commits Mailing List: link:++https://lists.apache.org/list.html?commits@training.apache.org++[Archive]  -  mailto:commits-subscribe@training.apache.org[Subscribe]
 
-Wiki: [https://cwiki.apache.org/confluence/display/TRAINING](https://cwiki.apache.org/confluence/display/TRAINING)
+Wiki: https://cwiki.apache.org/confluence/display/TRAINING
 
-Jira: [https://issues.apache.org/jira/browse/TRAINING](https://issues.apache.org/jira/browse/TRAINING)
+Jira: https://issues.apache.org/jira/browse/TRAINING
