- Changed the background to white and the foreground to black (#12)
- Replaced the yoda image with a photo I took
- Fine-tuned the installation script to work better on macs (renamed the script to reflect being designed for macs)
- Made the build output an index.html instead of an index.revealjs
- Fixed some paths in the pom
- Added the third-party libs to the rat exclusions

--- a/tools/maven-revealjs-asciidoctor-templte/src/main/asciidoc/index.adoc
+++ b/tools/maven-revealjs-asciidoctor-templte/src/main/asciidoc/index.adoc
@@ -80,7 +80,7 @@ include::subdir/_b.adoc[]
 == Images
 
 [.thumb]
-image::logo-and-name-white.png[scaledwidth=75%]
+image::logo-apache.png[scaledwidth=75%]
 
 == Videos
 
@@ -298,7 +298,7 @@ digraph g {
 
 === Meme Diagram
 
-meme::../resources/images/Yoda.png[May the Source,Be With You]
+meme::../resources/images/toddy.jpg[May the Source,Be With You]
 
 === Entity Relation Diagram
 
